{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Camp",
            "id": "0cefbd56-e6e6-4d98-a790-a730ca81c0f0",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "c5fe3bd5-2b1e-4656-8169-ebadc4b01699",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "PassThrough",
                    "id": "282138b9-4e09-4500-8f11-11c73f83f906",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "PassThrough",
                    "id": "4a013cb2-3b07-4254-84e5-9daa49cdb467",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Inspect",
                    "type": "PassThrough",
                    "id": "d02eee4c-4988-4a48-b307-cebaa8b85d32",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Number1",
                    "type": "Button",
                    "id": "5253a2a9-e9fa-4671-a61a-d65c8d3dd011",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Number2",
                    "type": "Button",
                    "id": "85d61da6-fd83-437d-bf16-b5d403ca1010",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Horizontal",
                    "id": "8c8184ce-523b-4d67-a5d6-3823ac7c7947",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6543417a-1033-476c-8dc1-99cb6e06c610",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "34a5b857-8510-4926-af76-4a9f7eb1c923",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "52bd0534-67a3-4543-ac3b-29a13258a5a3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab7bbd59-da82-4945-b2db-b8bca8f3f2a4",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b78d655-c795-42e4-b21d-1831b4aec33d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inspect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cde8a630-9f2b-4085-a955-dacd0ea9b26d",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Number1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d5658a2-9f9b-4a16-8947-77f1fa7873cd",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Number2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}